# cortex.t

./: .gitignore  .pre-commit-config.yaml  README.md  auto-update.sh  envrc.example  pyproject.toml
cortext/: __init__.py  global_config.py  protocol.py
cortext/base/: miner.py  validator.py
cortext/configs/: __init__.py  bandwidth.py  miner_manager.py  organic.py  redis.py  score.py  sql.py  synthesize.py  task_scheduler.py  validating.py
cortext/mining/: __init__.py
cortext/mining/forward/: __init__.py  claude.py  openai.py
cortext/utilities/: __init__.py  rate_limit.py  secure_request.py
cortext/validating/managing/: __init__.py  miner_manager.py  serving_counter.py  sql_schemas.py
docs/: MINER.md  REWARD_EXPLAINATION.md  VALIDATOR.md
neurons/: miner.py  validator.py
scripts/: gen_dotenv.py  install_exiftool.sh  install_redis.sh
services/managing/: server.py
services/monitoring/: monitor_credit_usage.py
services/organic/: server.py
services/organic/frontend/: app.py
services/scoring/: server.py
services/scoring/scorers/: image.py  text.py
services/subtensor_syncing/: data_types.py  server.py
services/synthesizing/: refill_worker.py  server.py
subnet_core/: global_config.py  protocol.py
subnet_core/base/: validator.py
subnet_core/configs/: __init__.py  bandwidth.py  redis.py  synthesize.py  validating.py  w_subtensor.py
subnet_core/ultilities/: rate_limit.py
subnet_core/validating/: __init__.py
tests/: test_call_local_miner.py  test_miner_manager.py  test_stream_server.py  test_validator_deployment.py
(+3 files in other folders)
